[package]
name = "pillar-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
futures-concurrency = "7.4.2"
pillar-fn = { path = "../pillar-fn" }
tokio = { version = "1.32.0", features = ["full"] }
